# rst2json

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.rst  SPEC.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
examples/render-split/: Makefile  README.rst  demo.rst  docutils.conf  index.j2  render-split.py  requirements.txt  section.j2  styles.css
examples/templates/: html4-custom.j2  html4.j2  html5.j2  latex-default.j2  latex-native.j2  xelatex-default.j2  xelatex-native.j2
src/rst2json/: __init__.py  __main__.py  core.py  knownopts.py  transforms.py  util.py
src/rst2json/writers/: __init__.py  _json_base.py  html4.py  html5.py  latex.py  xelatex.py
test/: test_command.py  test_commands.py  test_func.py  test_get_writers.py  test_knownopts.py  test_util.py
test/data/html4/: badparse.json  badparse.rst  code.json  code.rst  configged.conf  configged.json  configged.rst  dcterms.json  dcterms.rst  decorations.json  decorations.rst  demo.json  empty-field.json  empty-field.rst  escaped-titles.json  escaped-titles.rst  espanol.conf  espanol.json  espanol.rst  fancy-docinfo.json  fancy-docinfo.rst  fancy-titles-no-dir.json  fancy-titles-no-dir.rst  fancy-titles.conf  fancy-titles.json  fancy-titles.rst  math-html-embed.conf  math-html-embed.json  math-html-embed.rst  math-html.conf  math-html.json  math-html.rst  mathjax.conf  mathjax.json  mathml.conf  mathml.json  multi-abstract.json  multi-abstract.rst  multi-docinfo.json  multi-docinfo.rst  (+29 more)
test/data/html5/: badparse.json  code.json  configged.json  dcterms.json  dcterms.rst  decorations.json  demo.json  demo.rst  empty-field.json  empty-field.rst  escaped-titles.json  escaped-titles.rst  espanol.json  espanol.rst  fancy-docinfo.json  fancy-titles-no-dir.json  fancy-titles-no-dir.rst  fancy-titles.conf  fancy-titles.json  math-html-embed.conf  math-html-embed.json  math-html-embed.rst  math-html.conf  math-html.json  mathjax.conf  mathjax.json  mathjax.rst  mathml.conf  mathml.json  mathml.rst  multi-abstract.json  multi-docinfo.json  raws.json  source&escape.json  split-classed.conf  split-classed.json  split-classed.rst  split-fancy-sections.json  split-fancy-sectnum.conf  split-fancy-sectnum.json  (+15 more)
test/data/latex/: badparse.json  badparse.rst  code.json  configged.conf  configged.json  decorations.json  demo.json  demo.rst  escaped-titles.json  espanol.json  fancy-docinfo.json  fancy-docinfo.rst  fancy-titles-no-dir.conf  fancy-titles-no-dir.json  fancy-titles.json  math.json  math.rst  multi-abstract.json  multi-abstract.rst  multi-docinfo.json  raws.json  raws.rst  source&escape.json  source&escape.rst  split-classed.json  split-fancy-sections.json  split-fancy-sections.rst  split-fancy-sectnum.json  split-fn-brackets.conf  split-fn-brackets.json  split-fn-brackets.rst  split-fn.json  split-fn.rst  split-inf.json  split-sectnum.json  split-toc-nonnative.conf  split-toc-nonnative.json  split-toc.json  split-toc.rst  split-trans.json  (+5 more)
test/data/xelatex/: badparse.json  code.json  code.rst  configged.json  configged.rst  decorations.json  decorations.rst  demo.json  demo.rst  escaped-titles.json  espanol.conf  espanol.json  fancy-docinfo.json  fancy-titles-no-dir.json  fancy-titles.json  fancy-titles.rst  math.json  multi-abstract.json  multi-docinfo.json  multi-docinfo.rst  raws.json  source&escape.json  split-classed.json  split-fancy-sections.conf  split-fancy-sections.json  split-fancy-sectnum.json  split-fancy-sectnum.rst  split-fn-brackets.conf  split-fn-brackets.json  split-fn-brackets.rst  split-fn.conf  split-fn.json  (+16 more)
