[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rst2json"
dynamic = ["version"]
description = "Split rendered reStructuredText into JSON"
readme = "README.rst"
requires-python = ">=3.7"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "rst2json@varonathe.org" }
]

keywords = [
    "JSON",
    "docutils",
    "reStructuredText",
    "template",
    "templating",
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Text Processing :: Markup :: reStructuredText",
]

dependencies = [
    "docutils >= 0.18.1",
    "morecontext ~= 0.2",
]

[project.scripts]
rst2json = "rst2json.__main__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/rst2json"
"Bug Tracker" = "https://github.com/jwodder/rst2json/issues"

[tool.hatch.version]
path = "src/rst2json/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"
