[aliases]
make = sdist bdist_wheel

[metadata]
name = rst2json
#version = # Set in setup.py
description = Split rendered reStructuredText into JSON
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = rst2json@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/rst2json

keywords =
    JSON
    docutils
    reStructuredText
    template
    templating

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Documentation
    Topic :: Software Development :: Documentation
    Topic :: Text Processing
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: LaTeX

project_urls =
    Source Code = https://github.com/jwodder/rst2json
    Bug Tracker = https://github.com/jwodder/rst2json/issues

[options]
packages = find:
package_dir=
    =src
python_requires = ~= 3.6
install_requires =
    click ~= 7.0
    docutils >= 0.16

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rst2json = rst2json.__main__:main
